force-app/main/default/objects/Contract/fields/Contract_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Date__c</fullName>
    <description>Date field to house the Contract Date, coming in from AGBOSS</description>
    <label>Contract Date</label>
    <type>Date</type>
</CustomField>