force-app/main/default/objects/Contract/fields/Contract_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_External_ID__c</fullName>
    <description>Text field to house Contract External ID, coming in from AGBOSS</description>
    <label>Contract External ID</label>
    <length>36</length>
    <type>Text</type>
</CustomField>