force-app/main/default/objects/Contract/fields/Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Contract_Number__c</fullName>
    <description>Text field to house Contract Number, coming in from AGBOSS</description>
    <label>AGBOSS Contract Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>