force-app/main/default/objects/Contract/fields/Delivered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Quantity__c</fullName>
    <description>Text field to house Delivered Quantity, coming in from AGBOSS</description>
    <label>Delivered Quantity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>