force-app/main/default/objects/Contract/fields/Grower_s_Number__c.field-meta.xml
<CustomField>
    <fullName>Grower_s_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Grower Card to signify Grower&apos;s Number, coming in from AGBOSS.</description>
    <label>Grower&apos;s Number</label>
    <referenceTo>Grower_s_Card__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>