force-app/main/default/objects/Contract/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>Picklist field to house Quantity values, coming in from AGBOSS</description>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8 Days EOW of Delivery</fullName>
            </value>
            <value>
                <fullName>15 Days EOW of Delivery</fullName>
            </value>
            <value>
                <fullName>30 Days EOW of Delivery</fullName>
            </value>
            <value>
                <fullName>July Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>