force-app/main/default/objects/Contract/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <description>Text field to house Season values, in &quot;YYYY-YYYY&quot; format, coming in from AGBOSS</description>
    <label>Season</label>
    <length>9</length>
    <type>Text</type>
</CustomField>