force-app/main/default/objects/Contract/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship with Site, coming in from AGBOSS</description>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>