force-app/main/default/objects/Contract/fields/Undelivered_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Undelivered_Quantity__c</fullName>
    <description>Text field to house Undelivered Quantity data for the Grain Contract, coming in from AGBOSS</description>
    <label>Undelivered Quantity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>