force-app/main/default/objects/Contract/recordTypes/Grain_Contract.recordType-meta.xml
<RecordType>
    <fullName>Grain_Contract</fullName>
    <active>true</active>
    <description>Grower&apos;s Contract Record Type - used for all Grain Contracts</description>
    <label>Grain Contract</label>
</RecordType>