force-app/main/default/objects/Contract/listViews/AllContracts.listView-meta.xml
<ListView>
    <fullName>AllContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Season__c</columns>
    <columns>Total_Quantity__c</columns>
    <columns>CONTRACT.STATUS</columns>
    <filterScope>Everything</filterScope>
    <label>All Contracts</label>
</ListView>